crates/eure-macros/tests/compile_fail/section_raw_array_continuation_newline.rs
use eure::eure;

fn main() {
    let _doc = eure!({
        @a
        [] = 1
    });
}
